Added configuration data of exchange API

--- a/Connector/appsettings.Development.json
+++ b/Connector/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ExchangeApiSettings" : {
+    "BaseUrl" : "https://api-pub.bitfinex.com",
+    "Version" : "/v2",
+    "Endpoints" : {
+      "Trades" : "/trades",
+      "Candles" : "/candles",
+      "Ticker" : "/ticker"
+    }
   }
 }
