Created External websocket handler

--- a/Connector/appsettings.Development.json
+++ b/Connector/appsettings.Development.json
@@ -12,6 +12,7 @@
       "Trades" : "/trades",
       "Candles" : "/candles",
       "Ticker" : "/ticker"
-    }
+    },
+    "WebSocketUrl" : "wss://api-pub.bitfinex.com/ws/2"
   }
 }
