Implemented currency exchange rate calculation

--- a/Connector/appsettings.Development.json
+++ b/Connector/appsettings.Development.json
@@ -11,7 +11,8 @@
     "Endpoints" : {
       "Trades" : "/trades",
       "Candles" : "/candles",
-      "Ticker" : "/ticker"
+      "Ticker" : "/ticker",
+      "Calc" : "/calc"
     },
     "WebSocketUrl" : "wss://api-pub.bitfinex.com/ws/2"
   }
